[package]
name = "edgelet-docker"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

http-common = { workspace = true }

docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-settings = { path = "../edgelet-settings", features = ["settings-docker"] }
edgelet-utils = { path = "../edgelet-utils" }
