[package]
name = "edgelet-grpc"
version = "0.1.0"
authors = ["Azure IoT Edge Devs <edgedevs@microsoft.com"]
publish = false

[dependencies]
failure = "0.1"
futures = "0.1"
http = "0.1"
log = "0.3"
prost = "0.3"
prost-derive = "0.3"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-uds = "0.1"
tower = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
url = "1.6"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }