[package]
name = "edgelet-http-hosting"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.9"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1.2"
futures = "0.1"
hyper = "0.12"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
hosting = { path = "../hosting" }