[package]
name = "edgelet-http-mgmt"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.1.2"
hyper = "0.12"
lazy_static = "1.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2"

aziot-identity-common = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.2" }
edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-http = { path = "../edgelet-http" }
identity-client = { path = "../identity-client" }
management = { path = "../management" }
support-bundle = { path = "../support-bundle" }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }

edgelet-test-utils = { path = "../edgelet-test-utils" }
