[package]
name = "edgelet-http-mgmt"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
http = "0.2"
hyper = "0.14"
libc = "0.2"
log = "0.4"
percent-encoding = "2"
regex = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["parking_lot", "rt", "sync"] }
url = "2"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-settings = { path = "../edgelet-settings" }
support-bundle = { path = "../support-bundle" }

aziot-identity-client-async = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }
aziot-identity-common = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }
aziot-identity-common-http = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }

http-common = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }

[dev-dependencies]
nix = "0.24"

edgelet-test-utils = { path = "../edgelet-test-utils" }
test-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
