[package]
name = "edgelet-http-mgmt"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

aziot-identity-client-async = { workspace = true }
aziot-identity-common = { workspace = true }
aziot-identity-common-http = { workspace = true }
http-common = { workspace = true }

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-settings = { path = "../edgelet-settings" }
support-bundle = { path = "../support-bundle" }


[dev-dependencies]
nix = { workspace = true }

test-common = { workspace = true }

edgelet-test-utils = { path = "../edgelet-test-utils" }
