[package]
name = "edgelet-http-workload"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
chrono = "0.4"
futures-util = "0.3"
http = "0.2"
hyper = "0.14"
log = "0.4"
libc = "0.2"
openssl = "0.10"
percent-encoding = "2"
regex = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["parking_lot", "sync"] }
url = "2"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-settings = { path = "../edgelet-settings" }

aziot-key-client = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-key-client-async = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-key-common = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-key-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-key-openssl-engine = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }

aziot-cert-client-async = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-cert-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-certd-config = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }

aziot-identity-client-async = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-identity-common = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
aziot-identity-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }

cert-renewal = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
http-common = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }

[dev-dependencies]
nix = "0.26"

edgelet-test-utils = { path = "../edgelet-test-utils" }
test-common = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.4" }
