[package]
name = "edgelet-http-workload"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
openssl = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

aziot-cert-client-async = { workspace = true }
aziot-cert-common-http = { workspace = true }
aziot-certd-config = { workspace = true }
aziot-identity-client-async = { workspace = true }
aziot-identity-common = { workspace = true }
aziot-identity-common-http = { workspace = true }
aziot-key-client = { workspace = true }
aziot-key-client-async = { workspace = true }
aziot-key-common = { workspace = true }
aziot-key-common-http = { workspace = true }
aziot-key-openssl-engine = { workspace = true }
cert-renewal = { workspace = true }
http-common = { workspace = true }

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-settings = { path = "../edgelet-settings" }


[dev-dependencies]
nix = { workspace = true }

test-common = { workspace = true }

edgelet-test-utils = { path = "../edgelet-test-utils" }


[lints]
workspace = true
