[package]
name = "edgelet-http"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
chrono = "0.4"
futures-util = "0.3"
http = "0.2"
libc = "0.2"
log = "0.4"
percent-encoding = "2"
serde = "1"
serde_json = "1"

edgelet-core = { path = "../edgelet-core" }
edgelet-settings = { path = "../edgelet-settings" }

http-common = { path="/home/noel/workspaces/nlcamp/iot-identity-service/http-common", features = ["tokio1"] }
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

edgelet-docker = { path = "../edgelet-docker" }
edgelet-test-utils = { path = "../edgelet-test-utils" }
