[package]
name = "edgelet-http"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
http = "0.2"
libc = "0.2"
log = "0.4"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["parking_lot", "sync"] }

edgelet-core = { path = "../edgelet-core" }
edgelet-settings = { path = "../edgelet-settings" }

http-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-test-utils = { path = "../edgelet-test-utils" }
