[package]
name = "edgelet-http"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

http-common = { workspace = true }

edgelet-core = { path = "../edgelet-core" }
edgelet-settings = { path = "../edgelet-settings" }


[dev-dependencies]
tokio = { workspace = true }

edgelet-docker = { path = "../edgelet-docker" }
edgelet-test-utils = { path = "../edgelet-test-utils" }


[lints]
workspace = true
