[package]
name = "edgelet-image-cleanup"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

http-common = { workspace = true }

edgelet-docker = { path = "../edgelet-docker" }
edgelet-core = { path = "../edgelet-core" }
edgelet-settings = { path = "../edgelet-settings" }


[lints]
workspace = true
