[package]
name = "edgelet-iothub"
version = "0.1.0"
authors = ["Azure IoT Edge Devs <edgedevs@microsoft.com>"]
publish = false

[dependencies]
base64 = "0.9"
chrono = "0.4"
failure = "0.1"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-utils = { path = "../edgelet-utils" }
iothubservice = { path = "../iothubservice" }

[dev_dependencies]
bytes = "0.4"
serde_json = "1.0"
tokio-core = "0.1"
