[package]
name = "edgelet-iothub"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.9"
chrono = "0.4"
failure = "0.1"
futures = "0.1"
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
iothubservice = { path = "../iothubservice" }

[dev_dependencies]
bytes = "0.4"
hyper = "0.12"
serde_json = "1.0"
tokio = "0.1.8"
typed-headers = "0.1"
