[package]
name = "edgelet-kube"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
base64 = "0.9"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
k8s-openapi = { version = "0.4", features = ["v1_10"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
native-tls = "0.2"
typed-headers = "0.1"

docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-utils = { path = "../edgelet-utils" }
kube-client = { path = "../kube-client" }

[dev_dependencies]
tokio = "0.1"
maplit = "1.0"
objekt = "0.1"
time = "0.1"

edgelet-test-utils = { path = "../edgelet-test-utils" }