[package]
name = "edgelet-kube"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
base64 = "0.9"
config = { version = "0.9", default-features = false, features = ["yaml"] }
failure = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
k8s-openapi = { version = "0.5.1", features = ["v1_10"] }
log = "0.4"
native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typed-headers = "0.1"
url = "1.7"
url_serde = "0.2"

docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-hsm = { path = "../edgelet-hsm"}
edgelet-utils = { path = "../edgelet-utils" }
kube-client = { path = "../kube-client" }
provisioning = { path = "../provisioning" }

[dev_dependencies]
config = { version = "0.9", default-features = false, features = ["json", "yaml"] }
json-patch = "0.2.5"
maplit = "1.0"
time = "0.1"
tokio = "0.1"

edgelet-test-utils = { path = "../edgelet-test-utils" }